--- a/nextjs2021/.prettierrc
+++ b/nextjs2021/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "semi": false,
-  "endOfLine": "lf",
-  "trailingComma": "es5",
-  "printWidth": 100
+    "arrowParens": "always",
+    "endOfLine": "lf",
+    "printWidth": 100,
+    "semi": false,
+    "trailingComma": "es5"
 }
