--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "fix": "prettier --write src"
   },
   "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.1.0",
+    "@mui/styled-engine-sc": "^5.1.0",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
     "swr": "^1.0.1"
   },
   "devDependencies": {
