--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "^2.8.3",
     "@mui/material": "^5.1.0",
     "@mui/styled-engine-sc": "^5.1.0",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.19.5",
+    "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "zod": "^3.11.6"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
