--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^2.8.3",
     "@mui/material": "^5.1.0",
     "@mui/styled-engine-sc": "^5.1.0",
+    "@mui/styles": "^5.1.1",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
